--- a/content/posts/2018-05-25-testing-1-8-2.md
+++ b/content/posts/2018-05-25-testing-1-8-2.md
@@ -1,8 +1,8 @@
 ---
-title: Post Three
+title: Learning to Code
 status: Published
 date: '2018-05-25'
-postFeaturedImage: /images/uploads/isabella juskova.jpg
+postFeaturedImage: /images/uploads/code.jpg
 excerpt: This is placeholder text that our web designers put here to make sure words appear properly on your website. This text is going to be replaced once the website is completed. You are currently reading text that is written in English, not any other language.
 ---
 
